# ML_mp

./: .gitignore  pyproject.toml  readme.md  requirements.txt
notebooks/: 01_data_exploration.ipynb  logistic_regression_eda.ipynb  random_forest_eda.ipynb  xgboost_eda.ipynb
