[project]
name = "ML_mp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kavin81", email = "kavin.srinivasan2@example.com" },
    { name = "krishal743", email = "krishal743@gmail.com" },
]

dependencies = [
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
    "xgboost>=3.0.5",
]
